# OV_Orbit_BLE_Course

./: .gitignore  README.md
Slides/: 01_Nordic_Company_Introduction_2024.pptx  03_Bluetooth Overview.pptx  04_Segger_Embedded_Studio.pptx  04_Visual_Studio_Code.pptx  attendance.txt
custom_ble_app/remote_controller/: CMakeLists.txt
kahoot/kahoot_c/src/: main.c
kahoot/kahoot_p/src/: main.c
remote_controller/: nrf52840dk_nrf52840.overlay
remote_controller/boards/: nrf52840dk_nrf52840.overlay
remote_controller/src/: main.c
remote_controller/src/custom_files/: motor_control.c  motor_control.h  remote.c  remote.h
temp/remote_controller/: prj.conf
temp_files/Step_2.x_sol/: prj.conf
temp_files/Step_2.x_sol/src/: main.c
temp_files/Step_3.0_sol/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
temp_files/Step_3.0_sol/src/: main.c
temp_files/Step_3.1_sol/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
temp_files/Step_3.1_sol/boards/: nrf52840dk_nrf52840.overlay
temp_files/Step_3.1_sol/src/: main.c
temp_files/Step_3.2_sol/: prj.conf
temp_files/Step_3.2_sol/src/: main.c
temp_files/Step_4.0_sol/: CMakeLists.txt  prj.conf
temp_files/Step_4.0_sol/src/: main.c
temp_files/Step_4.1_sol/: nrf52840dk_nrf52840.overlay  prj.conf
temp_files/Step_4.2_sol/: prj.conf
temp_files/Step_4.3_sol_step6_fix/: CMakeLists.txt
temp_files/Step_4.4_sol_final_app/: prj.conf
temp_files/Step_5.0_sol/: prj.conf
temp_files/Step_7.0_sol/: CMakeLists.txt
temp_files/Step_7.0_sol/src/: main.c
temp_files/Step_7.0_sol/src/custom_files/: remote.c  remote.h
(+26 files in other folders)
